--- a/config/config.yaml
+++ b/config/config.yaml
@@ -60,9 +60,9 @@ notification:
     wework_url: "" # 企业微信机器人的 webhook URL
     telegram_bot_token: "" # Telegram Bot Token
     telegram_chat_id: "" # Telegram Chat ID
-    email_from: jiankuiwang@hotmail.com # 发件人邮箱地址
-    email_password: Wjk2021174 # 发件人邮箱密码或授权码
-    email_to: 45903762@qq.com # 收件人邮箱地址，多个收件人用逗号分隔
+    email_from: "jiankuiwang@hotmail.com" # 发件人邮箱地址
+    email_password: "Wjk2021174" # 发件人邮箱密码或授权码
+    email_to: "jiankuiwang@hotmail.com,45903762@qq.com" # 收件人邮箱地址，多个收件人用逗号分隔
     email_smtp_server: "" # SMTP服务器地址（可选，留空自动识别）
     email_smtp_port: "" # SMTP端口（可选，留空自动识别）
     ntfy_server_url: "https://ntfy.sh" # ntfy服务器地址，默认使用公共服务，可改为自托管地址
